argo-rollout-percent/route-preview.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: birdie
    app.kubernetes.io/component: birdie
    app.kubernetes.io/instance: sm-argo-rollout-percent
  name: birdie-preview
spec:
  host: birdie-preview-sm-argo-rollout-percent.apps.ocp4.private.opequon.net
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: birdie-preview
    weight: 100
  wildcardPolicy: None
