argo-rollout-percent/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/disable_cookies: 'true'
  labels:
    app: birdie
    app.kubernetes.io/component: birdie
    app.kubernetes.io/instance: birdie
  name: birdie
spec:
  host: birdie-sm-argo-rollout-percent.apps.ocp4.private.opequon.net
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: birdie
    weight: 100
  wildcardPolicy: None
