argo-rollout-percent/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: birdie-vsvc
spec:
  gateways:
  - birdie-gateway
  hosts:
  - birdie-rollout-demo.apps.ocp4.private.opequon.net
  http:
  - name: primary
    route:
    - destination:
        host: birdie-stable
      weight: 100
    - destination:
        host: birdie-canary
      weight: 0
